@@ -701,7 +701,6 @@ define('ZBX_MIN_WIDGET_LINES', 1);
 define('ZBX_MAX_WIDGET_LINES', 100);
 
 // dashboards
-define('DASHBOARD_DEFAULT_ID', 1);
 define('DASHBOARD_MAX_ROWS', 64);
 define('DASHBOARD_MAX_COLUMNS', 12);
 
